<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Football Scores</string>
    <string name="action_settings">Settings</string>
    <string name="test_text">Test</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="matchday_text">Match day: %1$s</string>
    <string name="group_stage_text">Group Stages, Matchday: %1$s</string>
    <string name="first_knockout_round">First knockout round</string>
    <string name="quarter_final">Quarter Final</string>
    <string name="semi_final">Semi Final</string>
    <string name="final_text">Final</string>
    <string name="share_text">Share</string>
    <string name="about">About</string>
    <string name="home_crest">Home crest</string>
    <string name="away_crest">Away crest</string>
    <string name="about_text">
        This Application get Football Matches Score for the Premier League,Seria A,Bundesliga,Primera Division
        and the Uefa Champions League.
        All Matches data are acquired from football-data.org free API.
        All team Logos are acquired from http://hdlogo.wordpress.com/ upon requesting permission form the owner.
        The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed, and a modified version is given to students in the Udacity Android Nanodegree program.
        To report any bugs,or suggestions do not hesitate to send a mail to y.k.ibnelwalid@gmail.com.

        During the off season, fake data will be added to the app.
    </string>
    <string name="scores_widget_title">Today Scores</string>

    <!--
    Your Boss says:

    "It's important to always use an API key when you can. Get your own API key and put it into the strings.xml file."

    -->
    <string name="api_key" translatable="false">PLEASE ENTER YOUR API KEY HERE</string>
    <string name="dummy_data" translatable="false">{\"timeFrameStart\":\"2015–06–18\",\"timeFrameEnd\":\"2015–06-19\",\"count\":1,\"fixtures\":[{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}}]}</string>

    <!-- Football Leagues -->
    <string name="league_serie_a" translatable="false">Serie A</string>
    <string name="league_champions" translatable="false">UEFA Champions League</string>
    <string name="league_primera_division" translatable="false">Primera Division</string>
    <string name="league_bundesliga" translatable="false">Bundesliga</string>
    <string name="league_bundesliga_1" translatable="false">Bundesliga 1</string>
    <string name="league_bundesliga_2" translatable="false">Bundesliga 2</string>
    <string name="league_bundesliga_3" translatable="false">Bundesliga 3</string>
    <string name="league_1" translatable="false">League 1</string>
    <string name="league_2" translatable="false">League 2</string>
    <string name="league_premier" translatable="false">Premier League</string>
    <string name="league_segunda_division" translatable="false">Segunda Division</string>
    <string name="league_primera_liga" translatable="false">Primera Liga</string>
    <string name="league_eredivisie" translatable="false">Eredivisie</string>
    <string name="league_unknown">Unknown league (please report)</string>

    <string name="date_format">yyyy-MM-dd</string>
    <string name="day_format">EEEE</string>
    <string name="match_date_format">yyyy-MM-ddHH:mm:ss</string>
    <string name="new_date_format">yyyy-MM-dd:HH:mm</string>
    <string name="score">%1$s - %2$s</string>

    <!-- Default content descriptions -->
    <string name="share_text_description">Button to share the match details</string>
    <string name="matchday_description">Shows the match day</string>
    <string name="league_description">Shows the league name</string>
    <string name="home_crest_description">Shows the crest for the home team</string>
    <string name="away_crest_description">Shows the crest for the home team</string>
    <string name="home_name_description">Shows the name of the home team</string>
    <string name="away_name_description">Shows the name of the away team</string>
    <string name="score_description">Shows the match final score</string>
    <string name="data_description">Shows the match data</string>
    <string name="widget_description">Today\'s Football Scores Widget</string>

</resources>
