<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:baselineAligned="false"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:contentDescription="@string/home_crest_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/home_crest"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/test_text"
                android:id="@+id/home_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:contentDescription="@string/home_name_description"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/test_text"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/Score"
                android:id="@+id/score_textview"
                android:contentDescription="@string/score_description" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/test_text"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/data_textview"
                android:contentDescription="@string/data_description" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:contentDescription="@string/away_crest_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/away_crest"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/test_text"
                android:id="@+id/away_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:contentDescription="@string/away_name_description"
                />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_fragment_container">
    </FrameLayout>
</LinearLayout>
</android.support.v7.widget.CardView>

