<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="@dimen/keyline_1"
    >
    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:baselineAligned="false"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:contentDescription="@string/home_crest_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/home_crest"
                android:tint="@color/grey_300" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:gravity="center"
                android:text="@string/test_text"
                android:id="@+id/home_name"
                android:contentDescription="@string/home_name_description"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/test_text"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/Score"
                android:id="@+id/score_textview"
                android:textColor="@color/primary_text_default_material_light"
                android:contentDescription="@string/score_description"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/test_text"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/data_textview"
                android:contentDescription="@string/data_description"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:contentDescription="@string/away_crest_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/away_crest"
                android:tint="@color/grey_300"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/test_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:id="@+id/away_name"
                android:contentDescription="@string/away_crest_description"/>
        </LinearLayout>
    </LinearLayout>
 </LinearLayout>